--- a/package.json
+++ b/package.json
@@ -6,15 +6,23 @@
   "author": "Harsh Bopaliya",
   "scripts": {
     "serve": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "development": "mix",
+    "watch": "mix watch",
+    "production": "mix --production"
   },
   "license": "MIT",
   "dependencies": {
+    "cross-env": "^7.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "laravel-mix": "^6.0.49",
+    "nodemon": "^3.0.3",
+    "resolve-url-loader": "5.0.0",
+    "sass": "^1.70.0",
+    "sass-loader": "12.1.0"
   }
 }
