--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
   },
   "license": "MIT",
   "dependencies": {
+    "connect-mongo": "^5.1.0",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.4.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.18.0",
     "mongoose": "^8.1.2"
   },
   "devDependencies": {
