--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 COOKIE_SECRET = thisismysecret
 
-MONGO_CONNECTION_URL = "mongodb+srv://Harsh:Harsh%406790@cluster9.0lzfy6u.mongodb.net/pizza"
+MONGO_CONNECTION_URL = "mongodb+srv://Harsh:Harsh%406790@cluster5.ytfpobm.mongodb.net/pizza"
