--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 COOKIE_SECRET = thisismysecret
 
-MONGO_CONNECTION_URL = "mongodb+srv://Harsh:WP8sw1TEoHeQiFOm@cluster6.gcfoivj.mongodb.net/pizza"
+MONGO_CONNECTION_URL = "mongodb+srv://Harsh:WP8sw1TEoHeQiFOm@cluster0.x98zl.mongodb.net/Pizza"
+
+
+
+
+
